syntax = "proto3";

package pb;
option go_package = "./;pb";

//import "google/protobuf/empty.proto";

// The User service definition.
service UserSvc {
  rpc Find(FindReq) returns (FindReply);
  rpc Get(ID) returns (GetReply);
}

message Error {
    int32 code = 1;
    string reason = 2;
}

message FindReq {
}

message ID {
  int64 id = 1;
}

message User {
  int64 id = 1;
  string name = 2;
}

message FindReply {
  repeated User users = 1;
  Error err = 2;
}

message GetReply {
  User user = 1;
  Error err = 2;
}

